POM updates